# bd-chunk-project

./: .gitignore  README.md  Tối Ưu Token Cho Harness.md  pyproject.toml
docs/: PERSONAL-SKILL-LIBRARY-SOURCES.md  agent_design.md  agent_skill_factory_strategy.md  agent_tool_contract_methodology.md  ai_delivery_harness_plan.md  architecture.md  chunking_strategy.md  cms-trial-two-week-customer-session-plan.md  cms-trial.md  deep-research-prompt-writer.md  glossary.md  language_policy.md  library-index.md  methodology.md  methodology_addendum.md  project_file_index.md  workflow_agent_design.md
harness/: README.md  department-ai-operating-system.md  master-plan.md  phase-3-mvp-after-diagnostic.md  super-ai-transformation-plan.md
harness-learning-path/: README.md  REFERENCES.md  SA_HANDBOOK.md  WEEK01_5_DAY_PLAN.md  notebookLM
ontology/: bd_frame_catalog.yaml  mapping_rules.yaml  source_kind.yaml  types.yaml
persona-ca-nhan-va-cty/: 01-personal-persona.md  02-company-context.md  03-transformation-context.md  04-ceo-interview-assumptions.md  README.md
registry/: agent_catalog.yaml  skill_catalog.yaml  tool_profiles.yaml
research/: 01_2606.21856v1_Harness-MU_Full-Stack_Execution_Harness_for_Multi-User_Multi-Principal_Agent_Env.md  02_2606.20950v1_Power_Systems_Agent_Benchmark.md  03_2606.14249_HarnessX_A_Composable_Adaptive_and_Evolvable_Agent_Harness_Foundry.md  04_2606.08348v1_Bayesian-Agent_Evolving_Harness_Skills_with_Evidence-Based_Beliefs.md  05_2606.06324v1_HarnessFix_Trace-Grounded_Repair_of_Agent_Harness_Flaws.md  Tối Ưu Token Cho Harness.md  (+14 more)
(+28 files in other folders)
