[project]
name = "bd-chunk-project"
version = "0.1.0"
description = "BD Harness MVP"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
  "openpyxl",
  "pydantic",
  "typer",
  "pyyaml",
  "rich"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
